--- a/src/renderer/assets/tabler/scss/dashboard/_chat.scss
+++ b/src/renderer/assets/tabler/scss/dashboard/_chat.scss
@@ -74,7 +74,7 @@
 
 	.chat-message {
 		background-color: #f3f3f3;
-		color: $body-color;
+		color: $main-color;
 		margin-left: .5rem;
 		margin-right: 2.5rem;
 
