--- a/src/renderer/assets/tabler/scss/dashboard/_core.scss
+++ b/src/renderer/assets/tabler/scss/dashboard/_core.scss
@@ -4,7 +4,7 @@ html {
 	direction: ltr;
 }
 
-body {
+main {
 	direction: ltr;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
@@ -23,15 +23,15 @@ body {
 	}
 }
 
-body *::-webkit-scrollbar {
+main *::-webkit-scrollbar {
 	width: 6px;
 	height: 6px;
 	transition: .3s background;
 }
 
-body *::-webkit-scrollbar-thumb {
+main *::-webkit-scrollbar-thumb {
 	background: $gray-400;
 }
-body *:hover::-webkit-scrollbar-thumb {
+main *:hover::-webkit-scrollbar-thumb {
 	background: $gray-500;
 }
