--- a/src/renderer/assets/tabler/scss/dashboard/_maps.scss
+++ b/src/renderer/assets/tabler/scss/dashboard/_maps.scss
@@ -34,7 +34,7 @@
 		left: 0;
 		right: 0;
 		height: 10rem;
-		background: linear-gradient(to bottom, rgba($body-bg, 0) 5%, $body-bg 95%);
+		background: linear-gradient(to bottom, rgba($main-bg, 0) 5%, $main-bg 95%);
 		pointer-events: none;
 	}
 }
