--- a/src/renderer/assets/tabler/scss/dashboard/_text.scss
+++ b/src/renderer/assets/tabler/scss/dashboard/_text.scss
@@ -9,7 +9,7 @@
 }
 
 .text-inherit { color: inherit !important; }
-.text-default { color: $body-color !important; }
+.text-default { color: $main-color !important; }
 .text-muted-dark { color: $text-muted-dark !important; }
 
 .tracking-tight		{ letter-spacing: -0.05em !important; }
