--- a/src/renderer/assets/tabler/scss/dashboard/forms/_custom-imagecheck.scss
+++ b/src/renderer/assets/tabler/scss/dashboard/forms/_custom-imagecheck.scss
@@ -80,6 +80,6 @@
 	.imagecheck:hover &,
 	.imagecheck-input:focus ~ .imagecheck-figure &,
 	.imagecheck-input:checked ~ .imagecheck-figure & {
-		color: $body-color;
+		color: $main-color;
 	}
 }
