--- a/src/renderer/assets/tabler/scss/dashboard/_aside.scss
+++ b/src/renderer/assets/tabler/scss/dashboard/_aside.scss
@@ -12,14 +12,14 @@
 	visibility: hidden;
 	box-shadow: 0 0 5px 2px rgba(#000, .05);
 
-	body.aside-opened & {
+	main.aside-opened & {
 		@media (min-width: 1600px) {
 			visibility: visible;
 		}
 	}
 }
 
-.aside-body {
+.aside-main {
 	padding: 1.5rem;
 	flex: 1 1 auto;
 	overflow: auto;
