--- a/src/renderer/assets/tabler/scss/dashboard/_header.scss
+++ b/src/renderer/assets/tabler/scss/dashboard/_header.scss
@@ -4,7 +4,7 @@
 	background: #fff;
 	border-bottom: 1px solid $border-color;
 
-	body.fixed-header & {
+	main.fixed-header & {
 		position: fixed;
 		top: 0;
 		left: 0;
