--- a/src/renderer/assets/tabler/scss/dashboard/_selectize.scss
+++ b/src/renderer/assets/tabler/scss/dashboard/_selectize.scss
@@ -43,7 +43,7 @@
 	position: absolute;
 	right: 8px;
 	top: 50%;
-	color: $body-color;
+	color: $main-color;
 	opacity: 0.4;
 	margin-top: -12px;
 	line-height: 20px;
@@ -131,7 +131,7 @@
 .selectize-dropdown,
 .selectize-input,
 .selectize-input input {
-	color: $body-color;
+	color: $main-color;
 	font-family: inherit;
 	font-size: 15px;
 	line-height: 18px;
@@ -288,7 +288,7 @@
 }
 
 .selectize-dropdown .optgroup-header {
-	color: $body-color;
+	color: $main-color;
 	background: #fff;
 	cursor: default;
 }
@@ -299,7 +299,7 @@
 }
 
 .selectize-dropdown .active.create {
-	color: $body-color;
+	color: $main-color;
 }
 
 .selectize-dropdown .create {
