--- a/src/renderer/assets/tabler/scss/home/scss/_reset.scss
+++ b/src/renderer/assets/tabler/scss/home/scss/_reset.scss
@@ -2,7 +2,7 @@
 	box-sizing: border-box
 }
 
-a, article, aside, audio, b, body, canvas, dd, details, div, dl, dt, em, fieldset, figcaption, figure, footer, form, h1, h2, h3, h4, h5, h6, header, html, i, img, label, li, mark, menu, nav, ol, p, section, span, strong, sub, summary, sup, table, tbody, td, tfoot, th, thead, time, tr, u, ul, video {
+a, article, aside, audio, b, main, canvas, dd, details, div, dl, dt, em, fieldset, figcaption, figure, footer, form, h1, h2, h3, h4, h5, h6, header, html, i, img, label, li, mark, menu, nav, ol, p, section, span, strong, sub, summary, sup, table, tmain, td, tfoot, th, thead, time, tr, u, ul, video {
 	border: 0;
 	outline: 0;
 	vertical-align: baseline;
@@ -69,11 +69,11 @@ html {
 	overflow-x: auto
 }
 
-body, html {
+main, html {
 	height: 100%
 }
 
-body {
+main {
 	line-height: 1;
 	color: #000;
 	text-align: left;
